# devEngine

./: CMakeLists.txt  README.md  build.bat
config/: install.cmake  template-base-config.cmake.in  template-config-version.cmake.in  template-config.cmake.in  template-main-config-version.cmake.in  template-main-config.cmake.in
core/: CMakeLists.txt
core/include/core/: context.h  core.h  error.h  initialization.h  mash.h  matrixglm.h  resources.h  type.h  vao.h  variable.h
core/include/core/object/: bbo.h  bitmap.h  buffer.h  camera.h  cbo.h  draw.h  ebo.h  fbo.h  matrix.h  orthographic.h  perspective.h  rbo.h  rotate.h  scale.h  shader.h  tbo.h  texture.h  translate.h  vao.h  vao_buffer.h  vbo.h
core/src/: context.cpp  core.cpp  error.cpp  initialization.cpp  mash.cpp  matrixglm.cpp  resources.cpp  vao.cpp  variable.cpp
core/src/object/: bbo.cpp  buffer.cpp  camera.cpp  cbo.cpp  draw.cpp  ebo.cpp  fbo.cpp  matrix.cpp  orthographic.cpp  perspective.cpp  rbo.cpp  rotate.cpp  scale.cpp  shader.cpp  tbo.cpp  texture.cpp  translate.cpp  vao.cpp  vbo.cpp
core/src/object/31/: cbo.cpp  tbo.cpp  vao.cpp  vbo.cpp
core/src/object/legacy/: cbo.cpp  matrix.cpp  tbo.cpp  translate.cpp  vao.cpp  vbo.cpp
example/core/camera33/: CMakeLists.txt
example/core/camera33/res/shaders/: pos3col3tex2.frag  pos3col3tex2.vert  pos3tex2.frag  pos3tex2.vert
example/core/camera33/res/vertex/: cube.xyzst  rect.index  rect.xyzrgbst
example/core/camera33/src/: camera33.cpp
example/core/camera33ortho/: CMakeLists.txt
example/core/camera33ortho/res/vertex/: cursor.xyz  rect.rgb  rect.xyz
example/core/camera33ortho/src/: camera33ortho.cpp
example/core/color33/: CMakeLists.txt
example/core/color33/res/shaders/: color.frag  color.vert
example/core/color33/res/vertex/: rectangle.xyrgb
example/core/color33/src/: color33.cpp
example/core/framebuffer/: CMakeLists.txt
example/core/framebuffer/res/shaders/: pos2tex2.frag  pos2tex2.vert
example/core/framebuffer/res/vertex/: quad.xyst
example/core/framebuffer/src/: framebuffer.cpp
example/core/house/: CMakeLists.txt
example/core/house/res/shaders/: foundation.frag  pos3col3tex2.frag  pos3col3tex2.vert  pos3tex2.frag  roof.frag  roof.vert
example/core/house/res/vertex/: brick.st  brick.xyz  foundation.xyz  roof.xyzrgb  square.xyzrgbst  window.index  window.xyzst
example/core/house/src/: house.cpp
example/core/map33/: CMakeLists.txt
example/core/map33/res/vertex/: cube.index  cube.xyzst  map.index  map.xyzst  relief.index  relief.xyzst  test.index
example/core/map33/src/: map33.cpp
example/core/ortho33/: CMakeLists.txt
example/core/ortho33/res/shaders/: pos3.vert  pos3col3tex2.vert
example/core/ortho33/res/vertex/: rect.xyzrgbst
example/core/ortho33/src/: orto33.cpp
example/core/perspective33/: CMakeLists.txt
example/core/perspective33/res/shaders/: pos3.vert  pos3col3tex2.vert
example/core/perspective33/src/: perspective33.cpp
example/core/roundcube33/: CMakeLists.txt
example/core/roundcube33/res/shaders/: pos3col3.frag  pos3col3.vert  pos3tex2.frag  pos3tex2.vert
example/core/roundcube33/res/vertex/: box.index  box.xyzst  coordinate.xyzrgb  cube.index  cube.st  cube.xyz
example/core/roundcube33/src/: main.cpp
example/core/texture33/: CMakeLists.txt
example/core/texture33/res/shaders/: pos3tex2.vert
example/core/texture33/src/: texture33.cpp
example/core/translate33/: CMakeLists.txt
example/core/translate33/res/shaders/: pos3.vert  pos3col3.frag  pos3col3.vert
example/core/translate33/res/vertex/: rect.xyz  rhombus.rgb  rhombus.xyz  rotate.dxyz  translate.xyz  triangle.xyz
example/core/translate33/src/: translate33.cpp
graph/: CMakeLists.txt
graph/include/graph/: graph.h
graph/res/shaders/: pos3col3.frag  pos3col3.vert
graph/res/vertex/: coordinate.xyz  cursor.xyz
graph/res/vertex/original/: coordinate.rgb  coordinate.xyz  cursor.rgb
graph/src/: graph.cpp
plot/: CMakeLists.txt
plot/src/: library.cpp
space/: CMakeLists.txt
space/src/: library.cpp
