cmake_minimum_required(VERSION 3.10)

file(STRINGS "version" VERSION)

project(devEngine VERSION ${VERSION})

add_subdirectory(core)
add_subdirectory(graph)
add_subdirectory(plot)
add_subdirectory(space)
#add_subdirectory(tests)

add_subdirectory(example/core/camera33)
add_subdirectory(example/core/camera33ortho)
add_subdirectory(example/core/color33)
add_subdirectory(example/core/framebuffer)
add_subdirectory(example/core/ortho33)
add_subdirectory(example/core/map33)
add_subdirectory(example/core/house)
add_subdirectory(example/core/roundcube33)
add_subdirectory(example/core/texture33)
add_subdirectory(example/core/translate33)
add_subdirectory(example/core/perspective33)

# add_subdirectory(example/leagcy/map31)
# add_subdirectory(example/leagcy/rotate31)
# add_subdirectory(example/leagcy/texture31)
# add_subdirectory(example/leagcy/texture31vao)
# add_subdirectory(example/leagcy/texture31vbo)
# add_subdirectory(example/leagcy/texture31win)

# add_subdirectory(example/leagcy/sfml/mincraft31sfml)
# add_subdirectory(example/leagcy/sfml/roundcube31sfml)

# add_subdirectory(example/mainwindow/glfw)
# add_subdirectory(example/mainwindow/qt)
# add_subdirectory(example/mainwindow/win)
# add_subdirectory(example/mainwindow/wx)

# add_subdirectory(example/tutorial/qt)
# add_subdirectory(example/tutorial/qt-camera)
# add_subdirectory(example/tutorial_vao/qt)
# add_subdirectory(example/tutorial_vbo/qt)

add_dependencies(devGraph devCore)
add_dependencies(devPlot devCore)
add_dependencies(devSpace devCore)
#add_dependencies(testEngine devCore)

add_dependencies(camera33 devCore)
add_dependencies(camera33ortho devCore)
add_dependencies(color33 devCore)
add_dependencies(framebuffer devCore)
add_dependencies(house devCore)
add_dependencies(ortho33 devCore)
add_dependencies(map33 devCore)
add_dependencies(perspective33 devCore)
add_dependencies(roundcube33 devCore)
add_dependencies(texture33 devCore)
add_dependencies(translate33 devCore)

# add_dependencies(glfwWindow devCore)
# add_dependencies(qtWindow devCore)
# # add_dependencies(mainwindow/win devCore)
# add_dependencies(mainwindow/wx devCore)
# add_dependencies(map31 devCore)
# add_dependencies(mincraft31sfml devCore)
# add_dependencies(rotate31 devCore)
# add_dependencies(round31cube devCore)
# add_dependencies(texture31 devCore)
# add_dependencies(texture31vao devCore)
# add_dependencies(texture31vbo devCore)
# add_dependencies(texture31win devCore)
# add_dependencies(qtTutorial devCore)
# add_dependencies(qt-camera devCore)
# add_dependencies(qtTutorialVAO devCore)
# add_dependencies(qtTutorialVBO devCore)